[project]
name = "profasta"
description = "A Python library for working with protein containing FASTA files."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "David M. Hollenstein", email = "hollenstein.david@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["fasta", "bioinformatics", "mass spectrometry", "proteomics"]
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/hollenstein/profasta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "profasta/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
